# LazyTea-Client

./: README.md  main.py  pyproject.toml
LazyTea/: main_window.py
