[project]
name = "LazyTea"
version = "0.1.0a1"
description = "LazyTea独立客户端"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "markdown2>=2.5.3",
    "pyside6>=6.9.1",
    "ujson>=5.10.0",
    "websockets>=15.0.1",
    "pydantic>=2.0.0",
    "apsw>=3.50.1.0",
    "xxhash>=3.5.0",
    "loguru>=0.7.3",
    "nuitka>=2.7.12",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools.package-data]
nonebot_plugin_lazytea = ["resources/**/*"]

[tool.setuptools.packages]
find = {}
